--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,14 @@
 	position: absolute;
 }
 
+.fixed {
+    position: fixed;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+    z-index: 10000;
+}
+
 @media (max-width: 768px) {
 	.carousel,
 	.carousel .item,
